--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,77 @@
  *= require_tree .
  *= require_self
  */
+
+body {
+  background-color: #fff;
+  color: #333;
+  font-size: 13px;
+  line-height: 18px;
+  font-family: verdana, arial, helvetica, sans-serif;
+  margin: 33px;
+}
+
+p, ol, ul, td {
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  margin: 33px;
+}
+
+table {
+  border-collapse: separate;
+  text-indent: initial;
+  border-spacing: 2px;
+}
+
+th {
+  padding-bottom: 5px;
+  display: table-cell;
+  vertical-align: inherit;
+  font-weight: bold;
+  text-align: -internal-center;
+}
+
+td {
+  padding-bottom: 7px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+
+
+#notice {
+  color: green;
+}
+
+form {
+  display: block;
+  margin-top: 0em;
+}
+
+div.field, div.actions {
+  margin-bottom: 10px;
+}
+
+div {
+  display: block;
+}
+
+label {
+  display: block;
+  cursor: default;
+}
+
+a:visited {
+  color: #666;
+}
+
+a {
+  color: #000;
+}
+
+a:-webkit-any-link {
+  color:  webkit link;
+  cursor: pointer;
+  text-decoration: underline;
+}
