--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,1 +1,23 @@
 
+
+<% if flash[:notice] %>
+
+    <div class="flash">
+     <p id="notice">
+     <%= flash[:notice] %>
+     </p>
+    </div>
+
+<% end %>
+
+
+
+
+<p><strong>Title:</strong>
+<%= @book.title %></p>
+
+<p><strong>Body:</strong>
+<%= @book.body %></p>
+
+
+<%= link_to 'Edit', edit_book_path %>|<%= link_to 'Back', books_path %>
